--- a/style.css
+++ b/style.css
@@ -4,27 +4,16 @@
 }
 
 body {
-  background-image: url(img/pure\ black\ background.jpg);
-  background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+  background-image: url(./img/pure\ black\ background.jpg);
     height: 100vh;
+    overflow: hidden;
+    display: flex;
     font-family: 'Fjalla One', sans-serif;
+    justify-content: center;
+    align-items: center;
     color: white;
 }
 
-
-.bgLogo {
-  background-image: url(img/LOGO-FM.png);
-}
-
-
-.bg-transparent {
-    width: 98.5%;
-    height: 97%;
-    padding: 10px;
-    background-color: rgba(1, 0, 8, 0.4);
-}
 
 .container {
     width: 20rem;
@@ -32,9 +21,6 @@ body {
     background-color: rgba(14, 9, 58, 0.4);
     border-radius: 20px;
     border: 4px solid white;
-    position: absolute;
-    left: 35%;
-    top: 20px;
 }
 
 
@@ -113,6 +99,336 @@ body {
 
 
 /* CSS Animation */
+
+/* Animasi Background */
+.night {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform: rotateZ(45deg);
+}
+
+/* By: https://animatedbackgrounds.me/ */
+
+.shooting_star {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 2px;
+  background: linear-gradient(-45deg, #5f91ff, rgba(0, 0, 255, 0));
+  border-radius: 999px;
+  filter: drop-shadow(0 0 6px #699bff);
+  -webkit-animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
+          animation: tail 3000ms ease-in-out infinite, shooting 3000ms ease-in-out infinite;
+}
+.shooting_star::before {
+  content: "";
+  position: absolute;
+  top: calc(50% - 1px);
+  right: 0;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #5f91ff, rgba(0, 0, 255, 0));
+  transform: translateX(50%) rotateZ(45deg);
+  border-radius: 100%;
+  -webkit-animation: shining 3000ms ease-in-out infinite;
+          animation: shining 3000ms ease-in-out infinite;
+}
+.shooting_star::after {
+  content: "";
+  position: absolute;
+  top: calc(50% - 1px);
+  right: 0;
+  height: 2px;
+  background: linear-gradient(-45deg, rgba(0, 0, 255, 0), #5f91ff, rgba(0, 0, 255, 0));
+  transform: translateX(50%) rotateZ(45deg);
+  border-radius: 100%;
+  -webkit-animation: shining 3000ms ease-in-out infinite;
+          animation: shining 3000ms ease-in-out infinite;
+  transform: translateX(50%) rotateZ(-45deg);
+}
+.shooting_star:nth-child(1) {
+  top: calc(50% - -111px);
+  left: calc(50% - 94px);
+  -webkit-animation-delay: 1630ms;
+          animation-delay: 1630ms;
+}
+.shooting_star:nth-child(1)::before, .shooting_star:nth-child(1)::after {
+  -webkit-animation-delay: 1630ms;
+          animation-delay: 1630ms;
+}
+.shooting_star:nth-child(2) {
+  top: calc(50% - -142px);
+  left: calc(50% - 224px);
+  -webkit-animation-delay: 9986ms;
+          animation-delay: 9986ms;
+}
+.shooting_star:nth-child(2)::before, .shooting_star:nth-child(2)::after {
+  -webkit-animation-delay: 9986ms;
+          animation-delay: 9986ms;
+}
+.shooting_star:nth-child(3) {
+  top: calc(50% - 158px);
+  left: calc(50% - 38px);
+  -webkit-animation-delay: 1998ms;
+          animation-delay: 1998ms;
+}
+.shooting_star:nth-child(3)::before, .shooting_star:nth-child(3)::after {
+  -webkit-animation-delay: 1998ms;
+          animation-delay: 1998ms;
+}
+.shooting_star:nth-child(4) {
+  top: calc(50% - 134px);
+  left: calc(50% - 244px);
+  -webkit-animation-delay: 9342ms;
+          animation-delay: 9342ms;
+}
+.shooting_star:nth-child(4)::before, .shooting_star:nth-child(4)::after {
+  -webkit-animation-delay: 9342ms;
+          animation-delay: 9342ms;
+}
+.shooting_star:nth-child(5) {
+  top: calc(50% - 52px);
+  left: calc(50% - 45px);
+  -webkit-animation-delay: 457ms;
+          animation-delay: 457ms;
+}
+.shooting_star:nth-child(5)::before, .shooting_star:nth-child(5)::after {
+  -webkit-animation-delay: 457ms;
+          animation-delay: 457ms;
+}
+.shooting_star:nth-child(6) {
+  top: calc(50% - -116px);
+  left: calc(50% - 247px);
+  -webkit-animation-delay: 6398ms;
+          animation-delay: 6398ms;
+}
+.shooting_star:nth-child(6)::before, .shooting_star:nth-child(6)::after {
+  -webkit-animation-delay: 6398ms;
+          animation-delay: 6398ms;
+}
+.shooting_star:nth-child(7) {
+  top: calc(50% - 189px);
+  left: calc(50% - 227px);
+  -webkit-animation-delay: 8825ms;
+          animation-delay: 8825ms;
+}
+.shooting_star:nth-child(7)::before, .shooting_star:nth-child(7)::after {
+  -webkit-animation-delay: 8825ms;
+          animation-delay: 8825ms;
+}
+.shooting_star:nth-child(8) {
+  top: calc(50% - -134px);
+  left: calc(50% - 241px);
+  -webkit-animation-delay: 3982ms;
+          animation-delay: 3982ms;
+}
+.shooting_star:nth-child(8)::before, .shooting_star:nth-child(8)::after {
+  -webkit-animation-delay: 3982ms;
+          animation-delay: 3982ms;
+}
+.shooting_star:nth-child(9) {
+  top: calc(50% - 144px);
+  left: calc(50% - 284px);
+  -webkit-animation-delay: 6425ms;
+          animation-delay: 6425ms;
+}
+.shooting_star:nth-child(9)::before, .shooting_star:nth-child(9)::after {
+  -webkit-animation-delay: 6425ms;
+          animation-delay: 6425ms;
+}
+.shooting_star:nth-child(10) {
+  top: calc(50% - 150px);
+  left: calc(50% - 193px);
+  -webkit-animation-delay: 5334ms;
+          animation-delay: 5334ms;
+}
+.shooting_star:nth-child(10)::before, .shooting_star:nth-child(10)::after {
+  -webkit-animation-delay: 5334ms;
+          animation-delay: 5334ms;
+}
+.shooting_star:nth-child(11) {
+  top: calc(50% - 69px);
+  left: calc(50% - 96px);
+  -webkit-animation-delay: 2649ms;
+          animation-delay: 2649ms;
+}
+.shooting_star:nth-child(11)::before, .shooting_star:nth-child(11)::after {
+  -webkit-animation-delay: 2649ms;
+          animation-delay: 2649ms;
+}
+.shooting_star:nth-child(12) {
+  top: calc(50% - -155px);
+  left: calc(50% - 230px);
+  -webkit-animation-delay: 5979ms;
+          animation-delay: 5979ms;
+}
+.shooting_star:nth-child(12)::before, .shooting_star:nth-child(12)::after {
+  -webkit-animation-delay: 5979ms;
+          animation-delay: 5979ms;
+}
+.shooting_star:nth-child(13) {
+  top: calc(50% - -121px);
+  left: calc(50% - 185px);
+  -webkit-animation-delay: 6239ms;
+          animation-delay: 6239ms;
+}
+.shooting_star:nth-child(13)::before, .shooting_star:nth-child(13)::after {
+  -webkit-animation-delay: 6239ms;
+          animation-delay: 6239ms;
+}
+.shooting_star:nth-child(14) {
+  top: calc(50% - -121px);
+  left: calc(50% - 221px);
+  -webkit-animation-delay: 6794ms;
+          animation-delay: 6794ms;
+}
+.shooting_star:nth-child(14)::before, .shooting_star:nth-child(14)::after {
+  -webkit-animation-delay: 6794ms;
+          animation-delay: 6794ms;
+}
+.shooting_star:nth-child(15) {
+  top: calc(50% - -137px);
+  left: calc(50% - 28px);
+  -webkit-animation-delay: 4154ms;
+          animation-delay: 4154ms;
+}
+.shooting_star:nth-child(15)::before, .shooting_star:nth-child(15)::after {
+  -webkit-animation-delay: 4154ms;
+          animation-delay: 4154ms;
+}
+.shooting_star:nth-child(16) {
+  top: calc(50% - 116px);
+  left: calc(50% - 292px);
+  -webkit-animation-delay: 5775ms;
+          animation-delay: 5775ms;
+}
+.shooting_star:nth-child(16)::before, .shooting_star:nth-child(16)::after {
+  -webkit-animation-delay: 5775ms;
+          animation-delay: 5775ms;
+}
+.shooting_star:nth-child(17) {
+  top: calc(50% - -7px);
+  left: calc(50% - 14px);
+  -webkit-animation-delay: 6621ms;
+          animation-delay: 6621ms;
+}
+.shooting_star:nth-child(17)::before, .shooting_star:nth-child(17)::after {
+  -webkit-animation-delay: 6621ms;
+          animation-delay: 6621ms;
+}
+.shooting_star:nth-child(18) {
+  top: calc(50% - -36px);
+  left: calc(50% - 24px);
+  -webkit-animation-delay: 395ms;
+          animation-delay: 395ms;
+}
+.shooting_star:nth-child(18)::before, .shooting_star:nth-child(18)::after {
+  -webkit-animation-delay: 395ms;
+          animation-delay: 395ms;
+}
+.shooting_star:nth-child(19) {
+  top: calc(50% - 105px);
+  left: calc(50% - 44px);
+  -webkit-animation-delay: 1260ms;
+          animation-delay: 1260ms;
+}
+.shooting_star:nth-child(19)::before, .shooting_star:nth-child(19)::after {
+  -webkit-animation-delay: 1260ms;
+          animation-delay: 1260ms;
+}
+.shooting_star:nth-child(20) {
+  top: calc(50% - -191px);
+  left: calc(50% - 190px);
+  -webkit-animation-delay: 2071ms;
+          animation-delay: 2071ms;
+}
+.shooting_star:nth-child(20)::before, .shooting_star:nth-child(20)::after {
+  -webkit-animation-delay: 2071ms;
+          animation-delay: 2071ms;
+}
+
+@-webkit-keyframes tail {
+  0% {
+    width: 0;
+  }
+  30% {
+    width: 100px;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+@keyframes tail {
+  0% {
+    width: 0;
+  }
+  30% {
+    width: 100px;
+  }
+  100% {
+    width: 0;
+  }
+}
+@-webkit-keyframes shining {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 30px;
+  }
+  100% {
+    width: 0;
+  }
+}
+@keyframes shining {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 30px;
+  }
+  100% {
+    width: 0;
+  }
+}
+@-webkit-keyframes shooting {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(300px);
+  }
+}
+@keyframes shooting {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(300px);
+  }
+}
+@-webkit-keyframes sky {
+  0% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(405deg);
+  }
+}
+@keyframes sky {
+  0% {
+    transform: rotate(45deg);
+  }
+  100% {
+    transform: rotate(405deg);
+  }
+}
+
+/* Akhir Animasi Bacground */
+
+
+
     @keyframes borderAnimation {
         0% {
           border-color: #ccc;
@@ -190,22 +506,11 @@ body {
                 animation: text-focus-in 2s both, borderAnimation 2s infinite;
 }
 
-.facebook:hover, 
-.instagram:hover,
-.whatsapp:hover,
-.github:hover,
-.linkedin:hover {
+.facebook, 
+.instagram,
+.whatsapp,
+.github,
+.linkedin {
         -webkit-animation: bounce-in-top 1.1s both, blink-1 0.4s both, borderAnimation 2s infinite;
                 animation: bounce-in-top 1.1s both, blink-1 0.4s both, borderAnimation 2s infinite;
     }
-
-
-      
-/* CSS Responsive */
-@media (max-width: 767px) {
-
-    .container {
-       margin: 50px auto;
-       margin-left: -125px;
-    }
-}
