--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   background-image: url(./img/pure\ black\ background.jpg);
     height: 100vh;
     background-size: cover;
+    background-repeat: no-repeat;
     overflow: hidden;
     display: flex;
     font-family: 'Fjalla One', sans-serif;
